service-novs-annotation.yaml
kind: Service
apiVersion: v1
metadata:
  name: vs-disable-creation
  labels:
    svc: avisvc-no-vs
  annotations:
    "proxy_listener": "no"
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    name: avitest
