annotation-static-ip.yaml
apiVersion: v1
kind: Route
spec:
  host: annotation-static-ip
  to:
    kind: Service
    name: avisvc
metadata:
  name: route-annotation-static-ip
  annotations:
     avi_proxy: '{ "virtualservice": { "ip_address": {"type": "V4","addr": "100.64.154.79"}}}'
