httpsroute.yaml
apiVersion: v1
kind: Route
spec:
  host: aviroute2.local
  to:
    kind: Service
    name: avisvc
  tls:
    termination: edge
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIDOjCCAiKgAwIBAgIJAOfp9j7aJCxgMA0GCSqGSIb3DQEBCwUAMB4xHDAaBgNV
[...]
      zLt2N0fqc2EdOvGwzg0=
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN PRIVATE KEY-----
      MIIEuwIBADANBgkqhkiG9w0BAQEFAASCBKUwggShAgEAAoIBAQCW4iZ4HjtPt7iE
[...]
      u9FS3QbNpK27EaLSgQ1U
      -----END PRIVATE KEY-----
metadata:
  name: aviroute2
