path-route2.yaml
apiVersion: v1
kind: Route
spec:
  host: app.os.acme.com
  path: "/bar"
  to:
    kind: Service
    name: avisvc
metadata:
  name: pathroute2
